Added initials and pmarusama graphic :D

--- a/Janith/PCB/Altium/Project Outputs for Group_12_301_Project/Design Rule Check - cs301_Group-12-4 holes.html
+++ b/Janith/PCB/Altium/Project Outputs for Group_12_301_Project/Design Rule Check - cs301_Group-12-4 holes.html
@@ -224,12 +224,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">4:03:48 am</td>
+<td class="front_matter_column3">4:36:34 am</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:03</td>
+<td class="front_matter_column3">00:00:02</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">4</td></tr>
+<td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="ID0N11WE1HAVXJLWJSPDPFE0BUBJCQKAZGLRGP2FH1GUSHDJMVCWLL"><h2>Summary</h2></a><table>
+</table><a name="IDCWM55D2F50UEW0TQESLRLJJGNWUDIYT5L4R4VPKMGLCFVX41TGD"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,76 +265,60 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDN2SW5I2HAT41F2YDMDIMZ1SOTDPYLDUYPTAQL1HV1WXUQHVFC5WO">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDRLTSRVAA4104B1R1B3HJXWCPZN4IECTXKHHVKEIIFOOEAOPQUUFE">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVNZDXE34KZULOVQGVRUH4ZEKLDNGM5OJFKJBKJK2L0DAGSPBTJ4N">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDSX1MXL0VCPERF5ILLRXTTNYFDCG5MUBOZ5NR1ENQKLJMU1LTEXRG">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4SDNRHEEUVYKCGWIMIKZREDESK0DKL42QLW23TJPUSEHLFUOEECK">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDX5NVG4B43FNVERKQPDFKVULETGS0QPPXVAMMSXCDOE4DURZTU4OD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBHJG2WJS2QH1KSLSVN0YHFNFEERTR35DZ3O0K5CIA5AUSZMRVS2">Width Constraint (Min=0.254mm) (Max=0.762mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#IDAHOD3Z14SYWHB1M13ADGZGKEPNNBUYBAHXFOLCNY0JYQW44KBKOI">Width Constraint (Min=0.254mm) (Max=0.762mm) (Preferred=0.254mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID0F4GTBANEIQFGA2ROPELQPSX2P4JZJYCPZIGOZCVENNBAKU3WF5M">SMD To Corner (Distance=0.4mm) (All)</a></td>
+<td class="column1"><a href="#IDCPMYM1IPXTWHKH4WERUZ53B1VDVUUUZFBC3SPWIAIUO10FM0HIUE">SMD To Corner (Distance=0.4mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDRLZYCQAWG5FKEHIQ44OKXY4BUHOJNOW5BGDGL5K53TWRYRDKHH1H">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDL0KVEICH2AFZHW3QCHUF32MUYCFDGFL0IFABQ0LSM31DQSRJCS4F">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2LNKF4RI1UFEVM4QVN1HCJEZGHVDXPGVPL4YHIHRPGHA4LWLS5L">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
-<td class="column2">4</td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID1DIYCT0P25A5HA3MBD0AU4OVFC5RMJWDXRHF0JGLBU5PQDAQ3HB">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
-<td class="column2">0</td>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDC4S25OBRHAMVCME0S0R4KXYCNPGLSOBFJMBNY5DD214PYYJ21L1L">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDCTUKFNGNSGIUFCQNK3BVA5QVAD1B31RJS5BLW4C3DQZAYTWPRI4F">Hole Size Constraint (Min=0.025mm) (Max=3.2mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDSULITAE3VRETKTRTBTYOSFQUHAZKNMEC2Z0IUCHB2N3VZ51W01O">Silk To Solder Mask (Clearance=0.254mm) (IsText),(All)</a></td>
+<td class="column1"><a href="#IDLOA20UMHXSLFHMJABGZY2KBFVDX1DIOO5DNQNPO4P41IGTAHK1EF">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYRFZVLPTZUBQJN55P31F3HCWIGW1WZJDD5FUKZELEDBYDPJUJXAF">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDLNH2LXFE1FMEP5ZKKHWHQC1YQLKHSE3IK0MOR4JK3IJU5SGOTDZB">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDZG50FMW0PET3OXPXX3M0WUVBPJFWWUS54GAF5EOFTWSEE2BPWZ5L">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDZRTBXORGXOMDPWFWJ201YU3I2DWBE35T2JPLXVBB2JWXBARFMRN">Silk To Solder Mask (Clearance=0.254mm) (IsText),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHCP4RUVUPEUBPYHB33BRYPNSCKF1TT2LO0OYDWBJXI4ZZ44MJ4WG">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDHTGRDTPO44OKNULQ11QSN5WSFGG5TOM1IPVXI1LQNEG14X5F1WF">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+<td class="column1"><a href="#ID0WSX1UPZRWQAJ20AUJTG044UWEJZUT0XYBKFVAM5DIUDZBM0PIM">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="#IDXWQJBFDZANGLDV1KTYJI0XVUBCRN0IVXWTCVHYMZA0RZ0O0OU2LL">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">4</td>
+<td style="font-weight : bold" class="column2">0</td>
 </tr>
-</table><br><a name="ID2LNKF4RI1UFEVM4QVN1HCJEZGHVDXPGVPL4YHIHRPGHA4LWLS5L"><table>
-<tr>
-<th style="text-align : left" colspan="1" class="rule">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</th>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=5867.493mil|Location2.X=5994.727mil|Location1.Y=4446.075mil|Location2.Y=4573.309mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=5867.493mil|Location2.X=5994.727mil|Location1.Y=4446.075mil|Location2.Y=4573.309mil|Absolute=True">Hole Size Constraint: (3.2mm &gt; 2.54mm) Pad Free-1(20.65mm,21.666mm) on Multi-Layer Actual Hole Size = 3.2mm</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=5867.493mil|Location2.X=5994.727mil|Location1.Y=2740.075mil|Location2.Y=2867.309mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=5867.493mil|Location2.X=5994.727mil|Location1.Y=2740.075mil|Location2.Y=2867.309mil|Absolute=True">Hole Size Constraint: (3.2mm &gt; 2.54mm) Pad Free-1(20.65mm,-21.666mm) on Multi-Layer Actual Hole Size = 3.2mm</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=4241.493mil|Location2.X=4368.727mil|Location1.Y=4446.075mil|Location2.Y=4573.309mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=4241.493mil|Location2.X=4368.727mil|Location1.Y=4446.075mil|Location2.Y=4573.309mil|Absolute=True">Hole Size Constraint: (3.2mm &gt; 2.54mm) Pad Free-1(-20.65mm,21.666mm) on Multi-Layer Actual Hole Size = 3.2mm</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=4241.493mil|Location2.X=4368.727mil|Location1.Y=2740.075mil|Location2.Y=2867.309mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=D:\Documents\UOA\2023\Semester 2\COMPSYS301\repos\12_Cypress_LineFollowingRobot\Janith\PCB\Altium\cs301_Group-12-4 holes.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=4241.493mil|Location2.X=4368.727mil|Location1.Y=2740.075mil|Location2.Y=2867.309mil|Absolute=True">Hole Size Constraint: (3.2mm &gt; 2.54mm) Pad Free-1(-20.65mm,-21.666mm) on Multi-Layer Actual Hole Size = 3.2mm</acronym></a><br></td>
-</tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
+</table><br></body>
 </html>
